# fsc-user-microservice

./: .gitignore  README.md  pyproject.toml
alembic/versions/: 001_user_db_schema.py  002_seed_roles_widen_logins.py  003_company_role_fields.py  004_addresses_geo_fields.py  005_person_saved_addresses.py  006_person_saved_addresses_default_index.py  007_users_recovery_on_duty.py
app/: __init__.py  main.py
app/api/: deps.py  internal_deps.py
app/api/api_v1/: routes.py
app/api/api_v1/endpoints/: auth.py  internal_users.py  users.py
app/core/: config.py  exceptions.py  otp_store.py  redis_cache.py  security.py  storage.py
app/crud/command/: address_command.py  login_command.py  person_command.py  user_command.py
app/crud/query/: address_query.py  login_query.py  person_query.py  role_query.py  user_query.py
app/models/: __init__.py  address_model.py  enums.py  hub_model.py  login_model.py  person_model.py  role_model.py  user_model.py
app/schemas/: admin_schema.py  auth_schema.py  user_schema.py
app/services/: auth_service.py  user_service.py
tests/: conftest.py
