[project]
name = "fsc-user-microservice"
version = "0.1.0"
description = "User identity, authentication, KYC, address, and role management (PostgreSQL)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.4",
    "fastapi>=0.116.1",
    "passlib[bcrypt]>=1.7.4",
    # passlib 1.7.x expects bcrypt to expose __about__.__version__ (removed in bcrypt>=4).
    "bcrypt<4",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.0.1",
    "PyJWT>=2.10.1",
    "SQLAlchemy>=2.0.41",
    "uvicorn[standard]>=0.35.0",
    "python-multipart>=0.0.20",
    "redis>=5.0.0",
    "boto3>=1.35.0",
    "pytest>=8.3.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.4"]
